--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>log_gen</module>
+        <module>log_etl</module>
     </modules>
     <dependencies>
         <dependency>
