--- a/log_etl/pom.xml
+++ b/log_etl/pom.xml
@@ -11,5 +11,28 @@
 
     <artifactId>log_etl</artifactId>
 
+    <properties>
+        <spark.version>2.3.4</spark.version>
+        <scala.version>2.11.12</scala.version>
+        <fastjson.version>1.2.61</fastjson.version>
+    </properties>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.11</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
+    </dependencies>
+
+
+
 
 </project>
