--- a/log_etl/pom.xml
+++ b/log_etl/pom.xml
@@ -30,6 +30,12 @@
             <version>${spark.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>ch.hsr</groupId>
+            <artifactId>geohash</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
     </dependencies>
 
 
