--- a/log_gen/src/main/resources/log4j.properties
+++ b/log_gen/src/main/resources/log4j.properties
@@ -1,23 +1,31 @@
-log4j.rootLogger=DEBUG,xx
+log4j.rootLogger=INFO,console
 
 log4j.logger.abc = INFO,logFile
 
 log4j.logger.roll = INFO,rollingFile
 log4j.additivity.roll=false
 
-log4j.appender.xx=org.apache.log4j.ConsoleAppender
-log4j.appender.xx.Threshold=DEBUG
-log4j.appender.xx.ImmediateFlush=true
-log4j.appender.xx.Target=System.out
-log4j.appender.xx.layout=org.apache.log4j.PatternLayout
-log4j.appender.xx.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
+log4j.appender.trace=org.apache.log4j.ConsoleAppender
+log4j.appender.trace.Threshold=DEBUG
+log4j.appender.trace.ImmediateFlush=true
+log4j.appender.trace.Target=System.out
+log4j.appender.trace.layout=org.apache.log4j.PatternLayout
+log4j.appender.trace.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
+
+
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Threshold=DEBUG
+log4j.appender.console.ImmediateFlush=true
+log4j.appender.console.Target=System.out
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%m%n
 
 
 log4j.appender.rollingFile=org.apache.log4j.RollingFileAppender
 log4j.appender.rollingFile.Threshold=DEBUG
 log4j.appender.rollingFile.ImmediateFlush=true
 log4j.appender.rollingFile.Append=true
-log4j.appender.rollingFile.File=f:/logs/2020-07-22/doit.mall.access.log
+log4j.appender.rollingFile.File=d:/logs/wx/2020-07-22/doit.mall.access.log
 log4j.appender.rollingFile.MaxFileSize=120MB
 log4j.appender.rollingFile.MaxBackupIndex=50
 log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
