--- a/log_gen/src/main/resources/other.properties
+++ b/log_gen/src/main/resources/other.properties
@@ -1,13 +1,15 @@
 # logger,kafka
 sink.type=logger
-logger.type=console
 
-initdata.releasechannel=initdata/releasechannel.txt
-initdata.phoneinfo=initdata/phoneinfo.txt
-initdata.eventIds=initdata/eventIds.txt
+#roll  console
+logger.type=dayroll
 
-init.user.area=initdata/area.txt
+initdata.releasechannel=/loggen/initdata/releasechannel.txt
+initdata.phoneinfo=/loggen/initdata/phoneinfo.txt
+initdata.eventIds=/loggen/initdata/eventIds.txt
+
+init.user.area=/loggen/initdata/area.txt
 
 db.url=jdbc:mysql://127.0.0.1:3306/realtimedw?useUnicode=true&characterEncoding=utf8&useSSL=false
 db.user=root
-db.password=123456
+db.password=GDbEHxmSf87RkpNW
