--- a/log_gen/src/main/resources/local/log4j.properties
+++ b/log_gen/src/main/resources/local/log4j.properties
@@ -1,4 +1,9 @@
-log4j.rootLogger=INFO,trace
+log4j.rootLogger=INFO,console
+
+log4j.logger.abc = INFO,logFile
+
+log4j.logger.roll = INFO,rollingFile
+log4j.additivity.roll=false
 
 log4j.appender.trace=org.apache.log4j.ConsoleAppender
 log4j.appender.trace.Threshold=DEBUG
@@ -7,8 +12,7 @@ log4j.appender.trace.Target=System.out
 log4j.appender.trace.layout=org.apache.log4j.PatternLayout
 log4j.appender.trace.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
 
-log4j.logger.console = INFO,console
-log4j.additivity.console=false
+
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Threshold=DEBUG
 log4j.appender.console.ImmediateFlush=true
@@ -16,22 +20,13 @@ log4j.appender.console.Target=System.out
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%m%n
 
-log4j.logger.roll = INFO,rollingFile
-log4j.additivity.roll=true
+
 log4j.appender.rollingFile=org.apache.log4j.RollingFileAppender
 log4j.appender.rollingFile.Threshold=DEBUG
 log4j.appender.rollingFile.ImmediateFlush=true
 log4j.appender.rollingFile.Append=true
-log4j.appender.rollingFile.File=/loggen/logdata/wx/event.log
+log4j.appender.rollingFile.File=d:/logs/wx/2020-07-22/doit.mall.access.log
 log4j.appender.rollingFile.MaxFileSize=120MB
 log4j.appender.rollingFile.MaxBackupIndex=50
 log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.rollingFile.layout.ConversionPattern=%m%n
-
-log4j.logger.dayroll = INFO,DailyRolling
-log4j.additivity.dayroll=true
-log4j.appender.DailyRolling=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.DailyRolling.File=/loggen/logdata/wx/event.log
-log4j.appender.DailyRolling.DatePattern=yyyy-MM-dd'.log'
-log4j.appender.DailyRolling.layout=org.apache.log4j.PatternLayout
-log4j.appender.DailyRolling.layout.ConversionPattern=%m%n
