--- a/log_gen/src/main/resources/local/other.properties
+++ b/log_gen/src/main/resources/local/other.properties
@@ -1,7 +1,7 @@
 # logger,kafka
 sink.type=logger
 
-#roll  console
+#roll  console dayroll
 logger.type=roll
 
 initdata.releasechannel=initdata/releasechannel.txt
@@ -13,3 +13,6 @@ init.user.area=initdata/area.txt
 db.url=jdbc:mysql://127.0.0.1:3306/realtimedw?useUnicode=true&characterEncoding=utf8&useSSL=false
 db.user=root
 db.password=123456
+
+# max concurrent accessor amount
+online.max.num=100
