--- a/log_gen/src/main/resources/log4j.properties
+++ b/log_gen/src/main/resources/log4j.properties
@@ -17,21 +17,21 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%m%n
 
 log4j.logger.roll = INFO,rollingFile
-log4j.additivity.roll=true
+log4j.additivity.roll=false
 log4j.appender.rollingFile=org.apache.log4j.RollingFileAppender
 log4j.appender.rollingFile.Threshold=DEBUG
 log4j.appender.rollingFile.ImmediateFlush=true
 log4j.appender.rollingFile.Append=true
-log4j.appender.rollingFile.File=d:/loggen/logdata/wx/event.log
+log4j.appender.rollingFile.File=/loggen/logdata/wx/event.log
 log4j.appender.rollingFile.MaxFileSize=120MB
 log4j.appender.rollingFile.MaxBackupIndex=50
 log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.rollingFile.layout.ConversionPattern=%m%n
 
 log4j.logger.dayroll = INFO,DailyRolling
-log4j.additivity.dayroll=true
+log4j.additivity.dayroll=false
 log4j.appender.DailyRolling=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.DailyRolling.File=d:/loggen/logdata/wx/event_log_
+log4j.appender.DailyRolling.File=/loggen/logdata/wx/event_log_
 log4j.appender.DailyRolling.DatePattern=yyyy-MM-dd'.log'
 log4j.appender.DailyRolling.layout=org.apache.log4j.PatternLayout
 log4j.appender.DailyRolling.layout.ConversionPattern=%m%n
