--- a/log_etl/pom.xml
+++ b/log_etl/pom.xml
@@ -52,6 +52,22 @@
             <artifactId>json-serde</artifactId>
             <version>1.3.8</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.kudu</groupId>
+            <artifactId>kudu-client</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+
+        <!--导入kudu的客户端工具-->
+        <dependency>
+            <groupId>org.apache.kudu</groupId>
+            <artifactId>kudu-client-tools</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+
+
     </dependencies>
 
 
